<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/tv_car_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableLeft="@drawable/img_bottom_car_one"
        android:drawablePadding="30dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/car_one"
        android:textSize="@dimen/normal_text_size"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/tv_car_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableLeft="@drawable/img_bottom_car_two_def"
        android:drawablePadding="30dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/car_two"
        android:textSize="@dimen/normal_text_size" />

    <View style="@style/divider_line_two"></View>

    <TextView
        android:id="@+id/tv_car_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableLeft="@drawable/img_bottom_car_three_def"
        android:drawablePadding="30dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/car_three"
        android:textSize="@dimen/normal_text_size" />

    <View style="@style/divider_line_two"></View>

    <TextView
        android:id="@+id/tv_car_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableLeft="@drawable/img_bottom_car_four_def"
        android:drawablePadding="30dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/car_four"
        android:textSize="@dimen/normal_text_size" />

    <View style="@style/divider_line_two"></View>
</LinearLayout>